--- a/Statapp_test.ipynb
+++ b/Statapp_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,66 +683,24 @@
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/AUS...Q/all\n",
       "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUS...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/BEL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/BEL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/CAN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CAN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/DNK...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/DNK...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/ESP...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ESP...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/FIN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FIN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/FRA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FRA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/GRC...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GRC...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/IRL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/IRL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/ITA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ITA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/JPN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/JPN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/LUX...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/LUX...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NOR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NOR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NZL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NZL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NLD...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NLD...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/PRT...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/PRT...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/GBR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GBR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n"
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SURFACE\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:28: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/SWE...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/SWE...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/CHE...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CHE...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/TUR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/TUR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
-      "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/USA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/USA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-09240b04653a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m     country_df = cif.createOneCountryDataFrameFromOECD('{0}'.format(pays_ocde[country]),\n\u001b[0;32m     14\u001b[0m                                                        \u001b[1;34m'MEI'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfrequency\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Q'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                                                        startDate='1990-Q1')[0]\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m#On récupère les colonnes:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\cif\\cif.py\u001b[0m in \u001b[0;36mcreateOneCountryDataFrameFromOECD\u001b[1;34m(country, dsname, subject, measure, frequency, startDate, endDate)\u001b[0m\n\u001b[0;32m    173\u001b[0m             \u001b[0mmeasureList\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponseJson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'structure'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dimensions'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'observation'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'values'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 175\u001b[1;33m             \u001b[0mobs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobsList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    176\u001b[0m             \u001b[0mobs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'series'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m             \u001b[0mobs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    409\u001b[0m             )\n\u001b[0;32m    410\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 411\u001b[1;33m             \u001b[0mmgr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    412\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    413\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[1;34m(data, index, columns, dtype)\u001b[0m\n\u001b[0;32m    255\u001b[0m             \u001b[0marr\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    256\u001b[0m         ]\n\u001b[1;32m--> 257\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    258\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    259\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m     \u001b[1;31m# don't force copy because getting jammed in an ndarray anyway\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m     \u001b[0marrays\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_homogenize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[1;31m# from BlockManager perspective\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36m_homogenize\u001b[1;34m(data, index, dtype)\u001b[0m\n\u001b[0;32m    321\u001b[0m                 \u001b[0mval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfast_multiget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    322\u001b[0m             val = sanitize_array(\n\u001b[1;32m--> 323\u001b[1;33m                 \u001b[0mval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_cast_failure\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    324\u001b[0m             )\n\u001b[0;32m    325\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36msanitize_array\u001b[1;34m(data, index, dtype, copy, raise_cast_failure)\u001b[0m\n\u001b[0;32m    636\u001b[0m         \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpandas_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    637\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 638\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    639\u001b[0m         \u001b[0mmask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetmaskarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    640\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -754,12 +712,12 @@
     "\n",
     "\n",
     "\n",
-    "pays_OCDE = ['DEU','AUS','AUT','BEL','CAN','DNK','ESP','FIN','FRA','GRC','IRL','ITA',\n",
-    "             'JPN','LUX','NOR','NZL','NLD','PRT','GBR','SWE','CHE','TUR','USA']\n",
+    "pays_ocde = {\"Germany\" :'DEU',\"Australie\" :'AUS',\"Austria\":'AUT',\"Belgium\":'BEL',\"Canada\":'CAN',\"Denmark\":'DNK',\"Spain\":'ESP',\"Finland\":'FIN',\"France\":'FRA',\"Greece\":'GRC',\"Ireland\":'IRL',\"Italia\":'ITA',\n",
+    "             \"Japan\":'JPN',\"Luxembourg\":'LUX',\"Norway\":'NOR',\"New-Zealand\":'NZL',\"Netherlands\":'NLD',\"Portugal\":'PRT',\"Great-Britain\":'GBR',\"Sweden\":'SWE',\"Switzerland\":'CHE',\"Turkey\":'TUR',\"United-States\":'USA'}\n",
     "\n",
-    "for country in pays_OCDE:\n",
+    "for country in pays_OCDE.keys():\n",
     "    # On importe de l'OCDE les données :\n",
-    "    country_df = cif.createOneCountryDataFrameFromOECD('{0}'.format(country),\n",
+    "    country_df = cif.createOneCountryDataFrameFromOECD('{0}'.format(pays_ocde[country]),\n",
     "                                                       'MEI', frequency='Q',\n",
     "                                                       startDate='1990-Q1')[0]\n",
     "    \n",
