--- a/Statapp_test.ipynb
+++ b/Statapp_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -679,70 +679,51 @@
      "output_type": "stream",
      "text": [
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/DEU...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/DEU...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/DEU...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/AUS...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUS...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUS...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/AUT...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/BEL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/BEL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/BEL...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/CAN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CAN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CAN...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/DNK...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/DNK...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/DNK...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/ESP...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ESP...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ESP...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/FIN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FIN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FIN...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/FRA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FRA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/FRA...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/GRC...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GRC...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GRC...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/IRL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/IRL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/IRL...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/ITA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ITA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/ITA...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/JPN...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/JPN...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/JPN...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/LUX...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/LUX...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/LUX...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NOR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NOR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NOR...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NZL...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NZL...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NZL...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/NLD...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NLD...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/NLD...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/PRT...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/PRT...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/PRT...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/GBR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GBR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SURFACE\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:30: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/GBR...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/SWE...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/SWE...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/SWE...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/CHE...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CHE...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/CHE...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/TUR...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/TUR...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n",
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/TUR...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n",
       "Requesting URL http://stats.oecd.org/SDMX-JSON/data/MEI/USA...Q/all\n",
-      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/USA...Q/all?startTime=1990-Q1&dimensionAtObservation=AllDimensions\n"
+      "Data downloaded from https://stats.oecd.org/SDMX-JSON/data/MEI/USA...Q/all?startTime=1990-Q1&endTime=2019-Q4&dimensionAtObservation=AllDimensions\n"
      ]
     }
    ],
@@ -763,7 +744,8 @@
     "    # On importe de l'OCDE les données :\n",
     "    country_df = cif.createOneCountryDataFrameFromOECD('{0}'.format(pays_ocde[country]),\n",
     "                                                       'MEI', frequency='Q',\n",
-    "                                                       startDate='1990-Q1')[0]\n",
+    "                                                       startDate='1990-Q1',\n",
+    "                                                       endDate = '2019-Q4')[0]\n",
     "    \n",
     "    #On récupère les colonnes:\n",
     "    d = {col:var_df for col, var_df in zip(headers, [country_df['{0}'.format(var)][\"STSA\"] for var in liste_var])}\n",
@@ -781,11 +763,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ocde_df.to_csv(\"ocde_df\")"
+    "ocde_df.to_csv(\"ocde_df.csv\")"
    ]
   },
   {
